# gb_remote

./: .gitignore  README.md
eez_dual_throttle/: eezproject.eez-project  eezproject.eez-project-ui-state
eez_lite/: eezproject.eez-project  eezproject.eez-project-ui-state
firmware/: c_cpp_properties.json  pack_firmware.py  sdkconfig  sdkconfig.defaults.dual_throttle  sdkconfig.defaults.lite
firmware/main/: CMakeLists.txt  battery.c  battery.h  ble.c  button.c  button.h  hw_config.h  idf_component.yml  lcd.c  level_assistant.c  level_assistant.h  lv_conf.h  main.c  power.c  power.h  target_config.h  throttle.c  throttle.h  ui_updater.c  ui_updater.h  usb_serial_handler.c  usb_serial_handler.h  version.h  vesc_config.c  vesc_config.h  viber.c  viber.h
firmware/main/ui_dual_throttle/: screens.c  ui.c  ui_font_bebas50.c  ui_image_100_connection.c  ui_image_config.c  ui_image_light_white.c  ui_image_odometer.c  ui_image_skateboard.c  ui_image_toggle_on.c
firmware/main/ui_lite/: actions.h  screens.c  screens.h  ui_font_bebas30.c  ui_image_66_connection.c  ui_image_about.c  ui_image_arclock.c  ui_image_battery_charging.c  ui_image_connection_0.c  ui_image_toggle_off.c
firmware/receiver_firmware/: BLE Data Protocol Reference.md  read_data.py  (+1 more)
firmware/receiver_firmware/main/: CMakeLists.txt  adc.c  adc.h  bldc_interface_uart.c  ble_spp_server.c  ble_spp_server.h  bms.c  bms.h  datatypes.h  hw_config.h  led.c  led.h  main.c
firmware/remote_firmware/ble_spp_client/main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  battery.c  battery.h  ble.c  ble.h  ble_spp_client.c  button.c  button.h  hw_config.h  idf_component.yml  lcd.c  lcd.h  main.c  power.c  power.h  sleep.c  sleep.h  target_config.h  throttle.c  throttle.h  ui_updater.c  ui_updater.h  usb_serial_handler.c  usb_serial_handler.h  vesc_config.c  vesc_config.h  viber.c
firmware/remote_firmware/ble_spp_client/main/ui/: actions.h  images.c  screens.c  screens.h  ui.c  ui_font_bebas150.c  ui_font_bebas20.c  ui_image_33_connection.c  ui_image_battery.c  ui_image_config.c  ui_image_hand_sensor.c  ui_image_info.c  ui_image_light_yellow.c  ui_image_throttle.c  ui_image_toggle_off.c  ui_image_toggle_on.c
firmware/remote_firmware/ble_spp_client/main/ui_dual_throttle/: fonts.h  screens.c  ui_font_bebas200.c  ui_font_bebas35.c  ui_image_about.c  ui_image_arcunlock.c
firmware/remote_firmware/ble_spp_client/main/ui_lite/: CMakeLists.txt  images.h  screens.c  ui_image_odometer.c  ui_image_throttle.c  ui_image_warning.c
(+643 files in other folders)
