idf_component_register(SRCS 
            "main.c" 
            "ble_spp_server.c" 
            "adc.c"
            "crc.c"
            "buffer.c"
            "bldc_interface.c"
            "bldc_interface_uart.c"
            "packet.c"
            "led.c"
            "bms.c"
        INCLUDE_DIRS ".")